<resources>
    <string name="app_name">DineWithUs</string>
    <string name="gpsEnableText">Show only Stores Near Me</string>
    <string name="profile_name">Niteesh Sundaram</string>
    <string name="profile_name_first">Niteesh</string>
    <string name="profile_name_last">Sundaram</string>
    <string name="profile_age">22</string>
    <string name="profile_gender">Male</string>
    <string name="profile_likes">Likes</string>
    <string name="profile_like1">1st Like</string>
    <string name="profile_like2">2nd Like</string>
    <string name="profile_like3">3rd Like</string>
    <string name="profile_dislikes">Dislikes</string>
    <string name="profile_dislike1">1st Dislike</string>
    <string name="profile_dislike2">2nd Dislike</string>
    <string name="profile_dislike3">3rd Dislike</string>
    <string name="profile_phone">Phone Number</string>
    <string name="profile_phone_hint">(xxx) xxx-xxxx</string>
    <string name="profile_email">Email</string>
    <string name="profile_email_hint">Enter Email Address</string>
    <string name="date_today">April 4, 2016</string>
    <string name="date_free">Free Time Blocks</string>
    <string name="date_addblock">Add Timeblock</string>

    <string name="login_text">LOGIN</string>
    <string name="profile_text">Profile</string>

    <string name="appoint_header">Appointments</string>

    <string name="appView_header">Appointment View</string>
    <string name="appViewRestName">Restaurant Name</string>
    <string name="appViewRestAddr">Restaurant Address</string>
    <string name="appViewAppInfo">Date</string>
    <string name="appViewStartTime">Start Time</string>
    <string name="appViewEndTime">End Time</string>
    <string name="appViewWith">With</string>
    <string name="appViewLikes">Likes</string>
    <string name="appViewConfirm">Confirm</string>
    <string name="appViewDeny">Deny</string>

    <string name="schedule_header">Schedule</string>

    <string name="shopDetailsName">Shop Name</string>
    <string name="shopDetailsAddr">Address</string>
    <string name="shopDetailsContact">Contact</string>
    <string name="shopDetailsHours">Hours</string>
    <string name="shopDetailsWebsite">Website</string>
    <string name="shopDetailsRating">Rating</string>
    <string name="shopDetailsFaves">Add to Favorites</string>

    <string name="shopLayoutHeader">Shops</string>
    <string name="shopLayoutLocation">Current location:</string>
    <string name="shopLayoutFilters">Filters</string>
    <string name="shopLayoutCuisine">Cuisine</string>

    <string name="errorLoginButton">OK</string>
    <string name="errorLoginTitle">Must Enter a Username</string>
    <string name="errorLoginMessage">Please Complete the Missing Fields</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shopLayoutPrice">Price</string>
    <string name="shopLayoutHours">Hours</string>
    <string name="shopLayoutTo">to</string>
    <string name="shopDetailsDescription">Details/Description</string>
    <string name="shopDetailsURL">www.site.com</string>
    <string name="shopDetailsMenu">Menu</string>
    <string name="shopDetailsMenuURL">www.site.com/menu</string>
    <string name="appointmentViewInterests">Interests:</string>
    <string name="appointmentViewInterestsList">Interests List</string>
    <string name="appointmentViewContact">Contact:</string>
    <string name="appointmentViewNumber">4123030054</string>
    <string name="loginLayoutName">Name</string>
    <string name="loginLayoutPassword">Password</string>
    <string name="scheduleViewText">Schedule View</string>


    <string name="camera_button">&#xf030; Take Picture</string>
    
    <string-array name="cuisine_array">
        <item>Chinese</item>
        <item>Indian</item>
        <item>Fast Food</item>
    </string-array>
    <string-array name="price_array">
        <item>Cheap</item>
        <item>Average</item>
        <item>Expensive</item>
    </string-array>

</resources>
