<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/profile_text"
        android:id="@+id/textView2" />

    <ImageButton
        android:layout_width="205dp"
        android:layout_height="171dp"
        android:id="@+id/imageButton"
        android:layout_row="0"
        android:layout_column="12"
        android:src="@drawable/niteeshbio"
        android:scaleType="centerInside"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/profile_name"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/profile_age"
        android:id="@+id/textView6"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/profile_gender"
        android:id="@+id/textView7"
        android:layout_below="@+id/textView6"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/profile_likes"
        android:id="@+id/textView8"
        android:layout_below="@+id/imageButton"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/like1EditText"
        android:layout_below="@+id/textView8"
        android:layout_alignParentStart="true"
        android:maxLength="10"
        android:hint="@string/profile_like1"
        android:textColor="#00ff00" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/like2EditText"
        android:maxLength="10"
        android:hint="@string/profile_like2"
        android:layout_alignTop="@+id/like1EditText"
        android:layout_centerHorizontal="true"
        android:textColor="#00ff00" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/like3EditText"
        android:maxLength="10"
        android:hint="@string/profile_like3"
        android:layout_alignTop="@+id/like2EditText"
        android:layout_alignParentEnd="true"
        android:textColor="#00ff00" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/profile_dislikes"
        android:id="@+id/textView9"
        android:layout_below="@+id/like1EditText"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dislike1EditText"
        android:layout_below="@+id/textView9"
        android:layout_alignParentStart="true"
        android:maxLength="10"
        android:hint="@string/profile_dislike1"
        android:textColor="#ff0000" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dislike2EditText"
        android:layout_below="@+id/textView9"
        android:layout_centerHorizontal="true"
        android:maxLength="10"
        android:hint="@string/profile_dislike2"
        android:textColor="#ff0000" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dislike3EditText"
        android:layout_alignTop="@+id/dislike2EditText"
        android:layout_alignParentEnd="true"
        android:maxLength="10"
        android:hint="@string/profile_dislike3"
        android:textColor="#ff0000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/profile_phone"
        android:id="@+id/textView10"
        android:layout_below="@+id/dislike1EditText"
        android:layout_alignParentStart="true"
        android:layout_marginTop="34dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/phoneEditText"
        android:layout_below="@+id/textView10"
        android:layout_alignParentStart="true"
        android:textColor="#0000ff"
        android:hint="@string/profile_phone_hint" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/profile_email"
        android:id="@+id/textView11"
        android:layout_below="@+id/phoneEditText"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/emailEditText"
        android:layout_below="@+id/textView11"
        android:layout_alignParentStart="true"
        android:hint="@string/profile_email_hint"
        android:textColor="#0000ff" />

</RelativeLayout>
</ScrollView>